--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MoneyTracker</string>
+    <string name="add_item_title">Новая запись</string>
+    <string name="add_item_text_name">Название</string>
+    <string name="add_item_text_amount">0</string>
+    <string name="add_item_rubles_char">₽</string>
 </resources>
